fixed: wrong button border on small screens

--- a/dashboard/sass/style.scss
+++ b/dashboard/sass/style.scss
@@ -128,7 +128,8 @@ body {
                         rgba(255, 255, 255, 0) 99.35%
                     );
                 }
-                .custom-card-plan.platinum {
+                .custom-card-plan.platinum,
+                .custom-card.gold {
                     .custom-card-number {
                         color: $white;
                     }
